# openscience-group-project

./: Dockerfile  Installation  LICENSE  README.md  docker-compose.yml  project.yaml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: documentation.yml  integration_tests.yml
docs/source/: conf.py  index.rst
docs/src/: README.md  rationale.md
docs/src/test/: test.py  tests.md
output/: landing_page.html
output/project/: help.html  ro-crate-metadata.json  ro-crate-preview.html
queries/: load_queries.py  sparql_queries.txt
res/datasets/grobid/: 11_43.xml  1206.3255.xml  1511.01844.xml  1704.05742.xml  1810.09136.xml  1812.05920v1.xml  2005.00341.xml  2007000499.xml  Affective_multimodal_human-computer_interaction.xml  Attributing_Emotion_to_Static_Body_Postures_Recogn.xml  Emotion_Analysis_in_Man-Machine_Interaction_System.xml  Infiltrates of Activated Mast Cells at the Site of Coronary Atheromatous Erosion or Rupture in Myocardial Infarction.xml  NeurIPS-2020-gradient-surgery-for-multi-task-learning-Paper.xml  PIIS0966842X16000718.xml  Speech_emotion_recognition_using_deep_1D (2).xml  annurev-statistics-010814-020120.xml  badshah2017.xml  btn-2020-0166.xml  descargar.xml  ding2012.xml  document.xml  download.xml  grumbach.xml  maaloe16.xml  microorganisms-10-01815-v2.xml  (+5 more)
res/models/: lda_model.pkl  vectorizer.pkl
res/ontology/: ontologia
src/: KGbuilder.py  latent_space.py  main.py  ontology_classes.py  paper.py  paper_space.py  process.ipynb  processing.ipynb  processor.py  rdfparser.py  train.py
tests/: test_analyzer.py
(+100 files in other folders)
