[tool.poetry]
name = "openscience-grupo"
version = "0.1.0"
description = "KGs"
authors = ["BAYONA GARAVITO, SEBASTIAN <sebastian.bayonag@alumnos.upm.es>"]
license = "MIT"
readme = "README.md"
packages = [{include = "openscience_grupo"}]

[tool.poetry.dependencies]
python = "^3.11"
grobid-client-python = "^0.0.5"
requests = "^2.30.0"
wikidataintegrator = "^0.9.27"
pyalex = "^0.9"
rdflib = "^6.3.2"
sentence-transformers = "^2.2.2"
transformers = "^4.29.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
